--- a/index.html
+++ b/index.html
@@ -164,8 +164,12 @@
 
               <a href="lessSandbox/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="zoombtn" style="margin-top: 20px;">
                 {&nbsp;CSS LESS Project&nbsp;}
-                </a>
-							
+              </a>
+              
+              <a href="carousel/index.html" target="_blank" class="btn btn-warning btn-lg zoombtn" color="white" style="margin-top: 20px;">
+                {&nbsp;Typing Text Animation&nbsp;}
+              </a>
+
 							<a href="rock-paper-scissors/index.html" target="_blank" class="btn btn-warning btn-lg zoombtn" color="white" style="margin-top: 20px;">
               {&nbsp;Rock Paper Scissors&nbsp;}
               </a>
