--- a/carousel/index.html
+++ b/carousel/index.html
@@ -27,7 +27,7 @@
     <span
         class="txt-rotate"
         data-period="2000"
-        data-rotate='["simple.", "made purely with JavaScript.", "was created by Connor Readnour.", "fun to mess around with!" ]'></span>
+        data-rotate='["simple.", "made purely with JavaScript.", "made by Connor Readnour.", "fun to mess around with!" ]'></span>
     </h1>
     <h2></h2>
 
