--- a/index - Copy.html
+++ b/index - Copy.html
@@ -189,7 +189,7 @@
             <div class="contact-links">
                 <!-- <a style="color:white;" class="btn contact-details" href="https://www.linkedin.com/in/connorreadnour/" id="profile-link" target="_blank"> used for white color and target blank href-->
                 <a class="btn contact-details" href="https://www.linkedin.com/in/connorreadnour/">    
-										Linkedin&nbsp;<i style="font-size:24px" class="fa">&#xf2b5;</i>
+										LinkedIn&nbsp;<i style="font-size:24px" class="fa">&#xf2b5;</i>
                 </a>
                 <a class="btn contact-details" href="mailto:connorreadnour@gmail.com">
 										Email&nbsp;<i style="font-size:24px" class="fa">&#xf003;</i>
