--- a/index - Copy.html
+++ b/index - Copy.html
@@ -195,7 +195,7 @@
 										Email&nbsp;<i style="font-size:24px" class="fa">&#xf003;</i>
                 </a>
                 <a class="btn contact-details" href="tel:630-639-6677">
-                    Call me&nbsp;<i style="font-size:24px" class="fa">&#xf10b;</i>
+                    Phone&nbsp;<i style="font-size:24px" class="fa">&#xf10b;</i>
                 </a>
             </div>
         </section>
