--- a/index.html
+++ b/index.html
@@ -17,24 +17,28 @@
 		</head>
     <body>
       <!--Navbar-->
-      <nav class="navbar navbar-dark red lighten-1 mb-4" style="position: fixed; color:white;">
+      <nav class="navbar " style="position: fixed; color:white; background-color: #1A1B41; border-radius: 5px; margin: 5px;">
 
         <!-- Navbar brand -->
         <a class="navbar-brand" href="#">Navigation Menu</a>
 
           <!-- Collapse button -->
-          <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarContent"
+        <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarContent"
           aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-          <div class="animated-icon1"><span></span><span></span><span></span></div>
+          <div class="animated-icon1" >
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </button>
 
         <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="navbarContent" style="background-color: #1A1B41; border-radius: 5px;">
+        <div class="collapse navbar-collapse" id="navbarContent">
 
           <!-- Links -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#welcome-section" style="color:white; margin-left:5px;">About Me</a>
+              <a class="nav-link" href="#welcome-section" style="color:white; margin-left:5px;">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#projects" style="color:white; margin-left:5px;">Work Examples</a>
