--- a/index - Copy.html
+++ b/index - Copy.html
@@ -38,16 +38,16 @@
           <!-- Links -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#welcome-section" style="color:white; margin-left:5px;">Home</a>
+              <a class="nav-link" href="#welcome-section" style="color:white; margin-left:5px; text-shadow: 2px 2px black;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects" style="color:white; margin-left:5px;">Work Examples</a>
+              <a class="nav-link" href="#projects" style="color:white; margin-left:5px; text-shadow: 2px 2px black;">Work Examples</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#side-projects" style="color:white; margin-left:5px;">Side Projects</a>
+              <a class="nav-link" href="#side-projects" style="color:white; margin-left:5px; text-shadow: 2px 2px black;">Side Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact" style="color:white; margin-left:5px;">Contact Info</a>
+              <a class="nav-link" href="#contact" style="color:white; margin-left:5px; text-shadow: 2px 2px black;">Contact Info</a>
             </li>
           </ul>
           <!-- Links -->
