--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav class="navbar " style="position: fixed; color:white; background-color: #1A1B41; border-radius: 5px; margin: 5px;">
 
         <!-- Navbar brand -->
-        <a class="navbar-brand">Navigation Menu</a>
+        <a class="navbar-brand">Nav Menu</a>
 
           <!-- Collapse button -->
         <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarContent"
