--- a/index - Copy.html
+++ b/index - Copy.html
@@ -16,7 +16,7 @@
       <nav class="navbar " style="position: fixed; color:white; background-color: #1A1B41; border-radius: 5px; margin: 5px;">
 
         <!-- Navbar brand -->
-        <a class="navbar-brand">Nav Menu</a>
+        <!--<a class="navbar-brand">Nav Menu</a> -->
 
           <!-- Collapse button -->
         <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarContent"
@@ -27,11 +27,11 @@
             <span></span>
           </div>
         </button>
-
+        
         <!-- Collapsible content -->
         <div class="collapse navbar-collapse" id="navbarContent">
 
-          <!-- Links -->
+          <!--Nav Menu Links -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#welcome-section" style="color:white; margin-left:5px; text-shadow: 2px 2px black;">Home</a>
@@ -249,6 +249,7 @@
 			document.querySelector('.hello').scrollIntoView({ 
 				behavior: 'smooth' 
 			});
+      // end of scroll code
 
       // Hamburger menu https://mdbootstrap.com/docs/jquery/navigation/hamburger-menu/
       $(document).ready(function () {
@@ -266,6 +267,7 @@
         $('.animated-icon3').toggleClass('open');
       });
       });
+      // end of hamburger code
 		</script>
 		</body>
 </html>
