--- a/index - Copy.html
+++ b/index - Copy.html
@@ -13,7 +13,7 @@
 		</head>
     <body>
       <!--Navbar-->
-      <nav class="navbar " style="position: fixed; color:white; background-color: #1A1B41; border-radius: 5px; margin: 5px;">
+      <nav class="navbar " style="position: fixed; color:#f8f8ff; background-color: #1A1B41; border-radius: 5px; margin: 5px;">
 
         <!-- Navbar brand -->
         <!--<a class="navbar-brand">Nav Menu</a> -->
@@ -34,16 +34,16 @@
           <!--Nav Menu Links -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#welcome-section" style="color:white; margin-left:5px; text-shadow: 2px 2px black;">Home</a>
+              <a class="nav-link" href="#welcome-section" style="color:#f8f8ff; margin-left:5px;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects" style="color:white; margin-left:5px; text-shadow: 2px 2px black;">Work Examples</a>
+              <a class="nav-link" href="#projects" style="color:#f8f8ff; margin-left:5px;">Work Examples</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#side-projects" style="color:white; margin-left:5px; text-shadow: 2px 2px black;">Side Projects</a>
+              <a class="nav-link" href="#side-projects" style="color:#f8f8ff; margin-left:5px;">Side Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact" style="color:white; margin-left:5px; text-shadow: 2px 2px black;">Contact Info</a>
+              <a class="nav-link" href="#contact" style="color:#f8f8ff; margin-left:5px;">Contact Info</a>
             </li>
           </ul>
           <!-- Links -->
@@ -59,10 +59,10 @@
 						<div style="text-align: center;" class="zoomImg"> <!--- add class="zoom" to get zoom effect-->
 							<img src="img/me.jpg" id="me" class="img-fluid img-thumbnail" alt="me!" style="width:100%; height:auto; max-width: 200px;">
 						</div>
-            <h1 style="color:white;">
+            <h1 style="color:#f8f8ff;">
                 Connor Readnour
             </h1>
-            <p style="color:white; text-align:center;">
+            <p style="color:#f8f8ff; text-align:center;">
                 Front-End Web Development  &nbsp |  &nbsp  CAD &nbsp | &nbsp IWMS
             </p>
 			  <br>
@@ -72,11 +72,11 @@
 				<br>
         <!-- Resume header-->
 
-					<h4 class="projects-section-header " style="color:white;">
+					<h4 class="projects-section-header " style="color:#f8f8ff;">
 						My Resume
 					</h4>
 					
-					<h6 class="projects-section-header " style="color:white;">
+					<h6 class="projects-section-header " style="color:#f8f8ff;">
 						<a href="Connor_Readnour_Resume.pdf" target="_blank">Click here for PDF</a>
 					</h6>
 		
@@ -89,22 +89,22 @@
        <!--End of About section -->
        <!--Start of Boostrap work -->
         <section id="projects">
-            <h2 class="projects-section-header" style="color:white;">
+            <h2 class="projects-section-header" style="color:#FD6585;">
                 Bootstrap examples
             </h2>
         <div class="projects-grid">
 					
-					<p class="project-title" style="color:white; display: inline-block;">
+					<p class="project-title" style="color:#FD6585; display: inline-block;">
 						&#123;&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceScenario.PNG">
 
-					<p class="project-title " style="color:white; display: inline-block;" >
+					<p class="project-title " style="color:#FD6585; display: inline-block;" >
 						&#123;&nbsp;Modal with Highlight Picker&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceModal.PNG">
 
-					<p class="project-title " style="color:white; display: inline-block;">
+					<p class="project-title " style="color:#FD6585; display: inline-block;">
 						&#123;&nbsp;Upgrading old web page to Bootstrap&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceUpgrade.png">
@@ -114,31 +114,31 @@
             <br />
 			<!--End of Boostrap work -->
 			<!--Start of CAD/CAFM work -->
-				<h2 class="projects-section-header" style="color:white;">
+				<h2 class="projects-section-header" style="color:#FD6585;">
 					Here is some of my CAD / IWMS / Other work
 				</h2>
         <div class="projects-grid">
-					<p class="project-title " style="color:white; display: inline-block;">
+					<p class="project-title " style="color:#FD6585; display: inline-block;">
 						&#123;&nbsp;AutoCAD Polylining example 1&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" src="img/plines.PNG">
-					<p class="project-title " style="color:white; display: inline-block;">
+					<p class="project-title " style="color:#FD6585; display: inline-block;">
 						&#123;&nbsp;AutoCAD Polylining example 2&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" src="img/plines2.PNG">
-					<p class="project-title " style="color:white; display: inline-block;" >
+					<p class="project-title " style="color:#FD6585; display: inline-block;" >
 						&#123;&nbsp;Revit Basic Home Model 1&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" src="img/getting_started_sheet.PNG">
-					<p class="project-title " style="color:white; display: inline-block;">
+					<p class="project-title " style="color:#FD6585; display: inline-block;">
 						&#123;&nbsp;Revit Basic Home Model 2&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" src="img/getting_started_01.PNG">
-					<p class="project-title " style="color:white; display: inline-block;">
+					<p class="project-title " style="color:#FD6585; display: inline-block;">
 						&#123;&nbsp;Excel Direct Connect Report&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" src="img/exceldc.PNG">
-        	<p class="project-title " style="color:white; display: inline-block;">
+        	<p class="project-title " style="color:#FD6585; display: inline-block;">
 						&#123;&nbsp;Monterrey Bay Aquarium Security Asset Project, from our Annual Company Presentation&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" src="img/aq.PNG">
@@ -150,7 +150,7 @@
           <br />
 					<br />
           <br />
-      			<h2 class="projects-section-header" style="color:white;">
+      			<h2 class="projects-section-header" style="color:#FD6585;">
               Side Projects
             </h2>
 					</div>
@@ -203,7 +203,7 @@
             </div>
         </section>
         <section class="contact-section" id="contact">
-            <div class="contact-section-header" style="color:white;">
+            <div class="contact-section-header" style="color:#f8f8ff;">
                 <h2>
                     Let's work together!
                 </h2>
@@ -221,7 +221,7 @@
                 </a>
             </div>
         </section>
-        <footer style="color:white; text-align:center;">
+        <footer style="color:#f8f8ff; text-align:center;">
             <p>
                 © Created by Connor Readnour
             </p>
