--- a/index - Copy.html
+++ b/index - Copy.html
@@ -63,7 +63,7 @@
                 Connor Readnour
             </h1>
             <p style="color:#f8f8ff; text-align:center;">
-                Front-End Web Development  &nbsp |  &nbsp  CAD &nbsp | &nbsp IWMS
+                Front-End Web Development &nbsp; | &nbsp;  CAD &nbsp; | &nbsp; IWMS
             </p>
 			  <br>
             <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" class="btn btn-dark zoombtn" color="white">
