--- a/index - Copy.html
+++ b/index - Copy.html
@@ -208,20 +208,20 @@
             </div>
         </section>
         <section class="contact-section" id="contact">
-            <div class="contact-section-header" style="color:#f8f8ff;">
+            <div class="contact-section-header" style="color:#FD6585;">
                 <h2>
                     Let's work together!
                 </h2>
             </div>
             <div class="contact-links">
                 <!-- <a style="color:white;" class="btn contact-details" href="https://www.linkedin.com/in/connorreadnour/" id="profile-link" target="_blank"> used for white color and target blank href-->
-                <a class="btn contact-details" href="https://www.linkedin.com/in/connorreadnour/">    
+                <a class="btn contact-details" href="https://www.linkedin.com/in/connorreadnour/" style="color:#FD6585">    
 										LinkedIn&nbsp;<i style="font-size:24px" class="fa">&#xf2b5;</i>
                 </a>
-                <a class="btn contact-details" href="mailto:connorreadnour@gmail.com">
+                <a class="btn contact-details" href="mailto:connorreadnour@gmail.com" style="color:#FD6585">
 										Email&nbsp;<i style="font-size:24px" class="fa">&#xf003;</i>
                 </a>
-                <a class="btn contact-details" href="tel:630-639-6677">
+                <a class="btn contact-details" href="tel:630-639-6677" style="color:#FD6585">
                     Phone&nbsp;<i style="font-size:24px" class="fa">&#xf10b;</i>
                 </a>
             </div>
