--- a/index - Copy.html
+++ b/index - Copy.html
@@ -46,18 +46,18 @@
               <a class="nav-link" href="#contact" style="color:#f8f8ff; margin-left:5px;">Contact Info</a>
             </li>
           </ul>
-          <!-- Links -->
+          <!-- end Links -->
 
         </div>
-        <!-- Collapsible content -->
+        <!-- end Collapsible content -->
 
       </nav>
-      <!--/.Navbar-->
+      <!--/. end Navbar-->
 
         <!--Start of About section -->
         <section id="welcome-section">
 						<div style="text-align: center;" class="zoomImg"> <!--- add class="zoom" to get zoom effect-->
-							<img src="img/me.jpg" id="me" class="img-fluid img-thumbnail" alt="me!" style="width:100%; height:auto; max-width: 200px;">
+							<img src="img/me.jpg" id="me" class="img-fluid img-thumbnail" alt="me!" style="width:100%; height:auto; max-width: 250px;">
             </div>
             <br>
             <h1 style="color:#FD6585;">
@@ -67,10 +67,17 @@
                 Front-End Web Development &nbsp; | &nbsp;  CAD &nbsp; | &nbsp; IWMS
             </p>
 			  <br>
-            <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" class="btn btn-dark zoombtn" style="color:#f8f8ff;">
-        		{&nbsp;Certified Responsive Web Design Developer&nbsp;}
-        		</a>
-				<br>
+        <!-- Certification Header-->
+        <h4 class="projects-section-header " style="color:#FD6585;">
+          Certified Responsive Web Design Developer
+        </h4>
+        <h6 class="projects-section-header " >
+          <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" style="color:#FD6585;">Click here to verify certification</a>
+        </h6>
+  
+        <div style="text-align: center;" class="zoomResume"> <!--- add class="zoom" to get zoom effect-->
+          <img src="img/responsiveWebDesignCert.jpg" id="cert" class="img-fluid img-thumbnail" alt="me!" style="width:100%; height:auto; max-width: 900px;">
+        </div>
         <!-- Resume header-->
 
 					<h4 class="projects-section-header " style="color:#FD6585;">
