--- a/index - Copy.html
+++ b/index - Copy.html
@@ -76,7 +76,7 @@
         </h6>
   
         <div style="text-align: center;" class="zoomResume"> <!--- add class="zoom" to get zoom effect-->
-          <img src="img/responsiveWebDesignCert.jpg" id="cert" class="img-fluid img-thumbnail" alt="me!" style="width:100%; height:auto; max-width: 900px;">
+          <img src="img/responsiveWebDesignCert.jpg" id="cert" class="img-fluid img-thumbnail" alt="certification" style="width:100%; height:auto; max-width: 900px;">
         </div>
         <!-- Resume header-->
 
