--- a/index - Copy.html
+++ b/index - Copy.html
@@ -56,19 +56,20 @@
 
         <!--Start of About section -->
         <section id="welcome-section">
+          <h1 style="color:#FD6585;">
+            Connor Readnour
+          </h1>
 						<div style="text-align: center;" class="zoomImg"> <!--- add class="zoom" to get zoom effect-->
 							<img src="img/me.jpg" id="me" class="img-fluid img-thumbnail" alt="me!" style="width:100%; height:auto; max-width: 250px;">
             </div>
             <br>
-            <h1 style="color:#FD6585;">
-                Connor Readnour
-            </h1>
+            
             <p style="color:#FD6585; text-align:center;">
                 Front-End Web Development &nbsp; | &nbsp;  CAD &nbsp; | &nbsp; IWMS
             </p>
 			  <br>
         <!-- Certification Header-->
-        <h4 class="projects-section-header " style="color:#FD6585;">
+        <h4 class="projects-section-header " style="color:#FD6585; text-align: center;">
           Certified Responsive Web Design Developer
         </h4>
         <h6 class="projects-section-header " >
