--- a/index - Copy.html
+++ b/index - Copy.html
@@ -88,7 +88,7 @@
             </h2>
             
             <h6 class="projects-section-header " >
-              <a href="Connor_Readnour_Resume.pdf" target="_blank" style="color:#FD6585;">Click here for PDF</a>
+              <a href="workfiles/Connor_Readnour_Resume_Port.pdf" target="_blank" style="color:#FD6585;">Click here for PDF</a>
             </h6>
             <br>
 
