--- a/index - Copy.html
+++ b/index - Copy.html
@@ -58,7 +58,7 @@
           <br>
           <!--Typerwriter start https://codepen.io/hi-im-si/pen/DHoup-->
           <h4> 
-            <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing"]'></a>
+            <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing","Welcome to my Portfolio!"]'></a>
               <span class="wrap"></span>
             </a>
           </h4>
