--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
               <a class="nav-link" href="#welcome-section" style="color:#f8f8ff; margin-left:5px;">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#resume" style="color:#f8f8ff; margin-left:5px;">Resume</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#projects" style="color:#f8f8ff; margin-left:5px;">Work Examples</a>
             </li>
             <li class="nav-item">
@@ -58,9 +61,7 @@
           <br>
           <!--Typerwriter start https://codepen.io/hi-im-si/pen/DHoup-->
           <h4> 
-            <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" 
-              data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing","Welcome to my Portfolio!",
-              "Use the menu in the top left to navigate"]'></a>
+            <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing","Welcome to my Portfolio!"]'></a>
               <span class="wrap"></span>
             </a>
           </h4>
@@ -79,7 +80,7 @@
           </div>
           <br>
           <!-- Resume header-->
-          <h2 class="projects-section-header " style="color:#FD6585;">
+          <h2 class="projects-section-header" id="resume" style="color:#FD6585;">
             My Resume
           </h2>
           <h6 class="projects-section-header " >
