--- a/index - Copy.html
+++ b/index - Copy.html
@@ -33,6 +33,9 @@
               <a class="nav-link" href="#welcome-section" style="color:#f8f8ff; margin-left:5px;">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#resume" style="color:#f8f8ff; margin-left:5px;">Resume</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#projects" style="color:#f8f8ff; margin-left:5px;">Work Examples</a>
             </li>
             <li class="nav-item">
@@ -77,7 +80,7 @@
           </div>
           <br>
           <!-- Resume header-->
-          <h2 class="projects-section-header " style="color:#FD6585;">
+          <h2 class="projects-section-header" id="resume" style="color:#FD6585;">
             My Resume
           </h2>
           <h6 class="projects-section-header " >
