--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <br>
           <!--Typerwriter start https://codepen.io/hi-im-si/pen/DHoup-->
           <h4> 
-            <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing","Welcome to my Portfolio!"]'></a>
+            <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing","Welcome to my Portfolio!","Use the menu in the top left to navigate."]'></a>
               <span class="wrap"></span>
             </a>
           </h4>
