--- a/backups/9_16_2020/index.html
+++ b/backups/9_16_2020/index.html
@@ -33,9 +33,6 @@
               <a class="nav-link" href="#welcome-section" style="color:#f8f8ff; margin-left:5px;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#resume" style="color:#f8f8ff; margin-left:5px;">Resume</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#projects" style="color:#f8f8ff; margin-left:5px;">Work Examples</a>
             </li>
             <li class="nav-item">
@@ -61,7 +58,7 @@
           <br>
           <!--Typerwriter start https://codepen.io/hi-im-si/pen/DHoup-->
           <h4> 
-            <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing","Welcome to my Portfolio!","Use the menu in the top left to navigate."]'></a>
+            <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing","Welcome to my Portfolio!"]'></a>
               <span class="wrap"></span>
             </a>
           </h4>
@@ -80,11 +77,11 @@
           </div>
           <br>
           <!-- Resume header-->
-          <h2 class="projects-section-header" id="resume" style="color:#FD6585;">
+          <h2 class="projects-section-header " style="color:#FD6585;">
             My Resume
           </h2>
           <h6 class="projects-section-header " >
-            <a href="workFiles/Connor_Readnour_Resume_Port.pdf" target="_blank" style="color:#FD6585;">Click here for PDF</a>
+            <a href="workfiles/Connor_Readnour_Resume_Port.pdf" target="_blank" style="color:#FD6585;">Click here for PDF</a>
           </h6>
           <br>
           <div style="text-align: center;" class="myImg"> <!--- add class="zoom" to get 1.5x zoom effect-->
@@ -265,7 +262,7 @@
             this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
 
             var that = this;
-            var delta = 100 - Math.random() * 100; // higher delta = slower typing
+            var delta = 100 - Math.random() * 100;
 
             if (this.isDeleting) { delta /= 2; }
 
