--- a/index - Copy.html
+++ b/index - Copy.html
@@ -30,19 +30,19 @@
           <!--Nav Menu Links -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#welcome-section" style="color:#f8f8ff; margin-left:5px;">Home</a>
+              <a class="nav-link" href="#welcome-section" style="color:#f8f8ff; margin-left:12px; display: inline-block;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#resume" style="color:#f8f8ff; margin-left:5px;">Resume</a>
+              <a class="nav-link" href="#resume" style="color:#f8f8ff; margin-left:12px; display: inline-block;">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects" style="color:#f8f8ff; margin-left:5px;">Work Examples</a>
+              <a class="nav-link" href="#projects" style="color:#f8f8ff; margin-left:12px; display: inline-block;">Work Examples</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#side-projects" style="color:#f8f8ff; margin-left:5px;">Side Projects</a>
+              <a class="nav-link" href="#side-projects" style="color:#f8f8ff; margin-left:12px; display: inline-block;">Side Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact" style="color:#f8f8ff; margin-left:5px;">Contact Info</a>
+              <a class="nav-link" href="#contact" style="color:#f8f8ff; margin-left:12px; display: inline-block;">Contact Info</a>
             </li>
           </ul>
           <!-- end Links -->
@@ -75,6 +75,7 @@
             <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" style="color:#FD6585;">Click here to verify certification</a>
           </h6>
           <br>
+          <!-- certification picture-->
           <div style="text-align: center;" class="zoomResume"> <!--- add class="zoom" to get zoom effect-->
             <img src="img/responsiveWebDesignCert.jpg" id="cert" class="img-fluid img-thumbnail" alt="certification" style="width:100%; height:auto; max-width: 900px;">
           </div>
