--- a/index - Copy.html
+++ b/index - Copy.html
@@ -165,8 +165,9 @@
               {&nbsp;Bootstrap CheatSheet&nbsp;}</a>
 							<a href="htmlcheatsheet/index.html" target="_blank" class="btn btn-success btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;HTML CheatSheet&nbsp;}</a>
-							 href="csscheatsheet/index.html" target="_blank" class="btn btn-success btn-lg zoombtn" color="white" style="margin: 15px;">
-              {&nbsp;CSS CheatSheet&nbsp;}>
+							<a href="csscheatsheet/index.html" target="_blank" class="btn btn-success btn-lg zoombtn" color="white" style="margin: 15px;">
+              {&nbsp;CSS CheatSheet&nbsp;}
+              </a>
 							<a href="animatedLoginForm/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;Animated Login Form&nbsp;}
               </a>
