--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
               <a href="lessSandbox/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="zoombtn" style="margin: 15px;">
                 {&nbsp;CSS LESS Project&nbsp;}
               </a>
+              <a href="JavaScriptPractice/index.html" target="_blank" class="btn btn-warning btn-lg zoombtn" color="white" style="margin: 15px;">
+                {&nbsp;JavaScript DOM Elements&nbsp;}
+              </a>
               <a href="carousel/index.html" target="_blank" class="btn btn-warning btn-lg zoombtn" color="white" style="margin: 15px;">
                 {&nbsp;Typing Text Animation&nbsp;}
               </a>
