--- a/index - Copy.html
+++ b/index - Copy.html
@@ -98,18 +98,22 @@
                 Bootstrap examples
             </h2>
         <div class="projects-grid">
+          <!--bootstrap example -->
 					<p class="project-title" style="color:#FD6585; display: inline-block;">
 						&#123;&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceScenario.PNG">
-					<p class="project-title " style="color:#FD6585; display: inline-block;" >
+          <!--bootstrap example -->
+          <p class="project-title " style="color:#FD6585; display: inline-block;">
 						&#123;&nbsp;Modal with Highlight Picker&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceModal.PNG">
-					<p class="project-title " style="color:#FD6585; display: inline-block;">
+          <!--bootstrap example -->
+          <p class="project-title " style="color:#FD6585; display: inline-block;">
 						&#123;&nbsp;Upgrading old web page to Bootstrap&nbsp;&#125;
 					</p>
             <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceUpgrade.png">
+          <!--bootstrap example -->
           <p class="project-title " style="color:#FD6585; display: inline-block;">
             &#123;&nbsp;Upgrading this Portfolio&nbsp;&#125;
           </p>
