--- a/index - Copy.html
+++ b/index - Copy.html
@@ -94,64 +94,59 @@
        <!--End of About section -->
        <!--Start of Boostrap work -->
         <section id="projects">
-            <h2 class="projects-section-header" style="color:#FD6585;">
-                Bootstrap examples
-            </h2>
-        <div class="projects-grid">
-          <!--bootstrap example -->
-					<p class="project-title" style="color:#FD6585; display: inline-block;">
-						&#123;&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;&#125;
-					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceScenario.PNG">
-          <!--bootstrap example -->
-          <p class="project-title " style="color:#FD6585; display: inline-block;">
-						&#123;&nbsp;Modal with Highlight Picker&nbsp;&#125;
-					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceModal.PNG">
-          <!--bootstrap example -->
-          <p class="project-title " style="color:#FD6585; display: inline-block;">
-						&#123;&nbsp;Upgrading old web page to Bootstrap&nbsp;&#125;
-					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/teamSpaceUpgrade.png">
-          <!--bootstrap example -->
-          <p class="project-title " style="color:#FD6585; display: inline-block;">
-            &#123;&nbsp;Upgrading this Portfolio&nbsp;&#125;
-          </p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" style="display: inline-block;" src="img/portfolioUpgrade.PNG"> 
-        </div>
+          <h2 class="projects-section-header" style="color:#FD6585;">
+              Bootstrap examples
+          </h2>
+              <div class="projects-grid">
+                <!--bootstrap example -->
+                <p class="project-title" style="color:#FD6585; display: block;">
+                  {&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;}
+                </p>
+                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block;" src="img/teamSpaceScenario.PNG">
+                <!--bootstrap example -->
+                <p class="project-title " style="color:#FD6585; display: block;">
+                  {&nbsp;Upgrading old web page to Bootstrap&nbsp;}
+                </p>
+                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block;" src="img/teamSpaceUpgrade.png">
+                <!--bootstrap example -->
+                <p class="project-title " style="color:#FD6585; display: block;">
+                  {&nbsp;Upgrading this Portfolio&nbsp;}
+                </p>
+                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block;" src="img/portfolioUpgrade.PNG"> 
+              </div>
             <br />
             <br />
 			<!--End of Boostrap work -->
 			<!--Start of CAD/CAFM work -->
-				<h2 class="projects-section-header" style="color:#FD6585;">
-					Here is some of my CAD / IWMS / Other work
-				</h2>
-        <div class="projects-grid">
-					<p class="project-title " style="color:#FD6585; display: inline-block;">
-						&#123;&nbsp;AutoCAD Polylining example 1&nbsp;&#125;
-					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/plines.PNG">
-					<p class="project-title " style="color:#FD6585; display: inline-block;">
-						&#123;&nbsp;AutoCAD Polylining example 2&nbsp;&#125;
-					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/plines2.PNG">
-					<p class="project-title " style="color:#FD6585; display: inline-block;" >
-						&#123;&nbsp;Revit Basic Home Model 1&nbsp;&#125;
-					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/getting_started_sheet.PNG">
-					<p class="project-title " style="color:#FD6585; display: inline-block;">
-						&#123;&nbsp;Revit Basic Home Model 2&nbsp;&#125;
-					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/getting_started_01.PNG">
-					<p class="project-title " style="color:#FD6585; display: inline-block;">
-						&#123;&nbsp;Excel Direct Connect Report&nbsp;&#125;
-					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/exceldc.PNG">
-        	<p class="project-title " style="color:#FD6585; display: inline-block;">
-						&#123;&nbsp;Monterrey Bay Aquarium Security Asset Project, from our Annual Company Presentation&nbsp;&#125;
-					</p>
-            <img alt="project" class="project-image img-thumbnail zoomImg" src="img/aq.PNG">
-					</div>
+          <h2 class="projects-section-header" style="color:#FD6585;">
+            Here is some of my CAD / IWMS / Other work
+          </h2>
+            <div class="projects-grid">
+              <p class="project-title " style="color:#FD6585; display: block;">
+                {&nbsp;AutoCAD Polylining example 1&nbsp;}
+              </p>
+                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/plines.PNG" >
+              <p class="project-title " style="color:#FD6585; display: block;">
+                {&nbsp;AutoCAD Polylining example 2&nbsp;}
+              </p>
+                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/plines2.PNG">
+              <p class="project-title " style="color:#FD6585; display: block;" >
+                {&nbsp;Revit Basic Home Model 1&nbsp;}
+              </p>
+                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/getting_started_sheet.PNG">
+              <p class="project-title " style="color:#FD6585; display: block;">
+                {&nbsp;Revit Basic Home Model 2&nbsp;}
+              </p>
+                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/getting_started_01.PNG">
+              <p class="project-title " style="color:#FD6585; display: block;">
+                {&nbsp;Excel Direct Connect Report&nbsp;}
+              </p>
+                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/exceldc.PNG">
+              <p class="project-title " style="color:#FD6585; display: block;">
+                {&nbsp;Monterrey Bay Aquarium Security Asset Project, from our Annual Company Presentation&nbsp;}
+              </p>
+                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/aq.PNG">
+				  	</div>
 				<!-- End of CAD/CAFM work  -->
         <!--Start of Side Proejects -->
 					<div  id="side-projects">
